# talenta_Similarity_TextToOntology

./: .gitignore  README.md  Text_to_Ontology.py  _setup.py  pyproject.toml  setup.py  talenta_text_to_ontology.ipynb
.github/workflows/: publish-python.yml  python-publish.yml  test.yml  verify-python.yml
examples/: similairty.ipynb
examples/indeed_similarity/modules/: __init__.py
indeed_similarity/: similarity.py
indeed_similarity/modules/: base.py  bert.py  jaccard.py  levenshtein.py  sequence.py  spacy.py
src/indeed_similarity/: similarity.py
src/indeed_similarity/modules/: base.py  bert.py  jaccard.py  levenshtein.py
src/indeed_similarity/utils/: general.py
test/: test_loadpipeline.py
